--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ContohProjectMaven</groupId>
-  <artifactId>ContohProject</artifactId>
+ <modelVersion>4.0.0</modelVersion>
+  <groupId>javamaven</groupId>
+  <artifactId>project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <version>0.3.1</version>
 
 <dependencies>
   <dependency>
